UX and css alignment fixes

--- a/gobblet-stack-toe-ui/src/app.css
+++ b/gobblet-stack-toe-ui/src/app.css
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 800px;
+    margin: auto;
 }
 
 .header {
