--- a/gobblet-stack-toe-ui/src/game/game-ui.css
+++ b/gobblet-stack-toe-ui/src/game/game-ui.css
@@ -37,4 +37,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 50px;
+}
+
+@media screen and (max-width: 550px) {
+    .game-toolbar {
+        font-size: 80%;
+    }
 }
